--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.google-button .nsm7Bb-HzV7m-LgbsSe {
+  background-color: blue;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  display: flex;
+}
+.google-button .nsm7Bb-HzV7m-LgbsSe-BPrWId {
+  background-color: blue;
+  color: white;
+  font-size: 20px;
+}
